--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wBook",
-  "description": "A demo app illustrating the usage of express, mongoose, passportjs, jade and other modules in nodejs",
-  "version": "0.0.5",
+  "description": "wBook is an online learning platform that teaches a variety of programming and web design skills. Courses range from beginner to advanced levels and you get to earn rewards and badges as you learn.",
+  "version": "0.8.0",
   "private": false,
   "engines": {
     "node": "0.10.x",
